[project]
name = "ex1"
version = "0.1.0"
description = ""
authors = [
    {name = "syokota",email = "syokota@student.42tokyo.jp"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy (==2.2.6)",
    "pandas (==2.3.3)",
    "matplotlib (==3.10.9)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
